# osdagbridger1

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  developer_guide.md  user_guide.md
examples/plate_girder/: example_basic.yaml  verification_case_01.yaml  verification_case_02.yaml
src/osdagbridge/: __init__.py  __main__.py
src/osdagbridge/cli/: __main__.py  commands.py
src/osdagbridge/core/: __init__.py  exceptions.py
src/osdagbridge/core/bridge_components/: __init__.py
src/osdagbridge/core/bridge_components/foundation/: __init__.py
src/osdagbridge/core/bridge_components/foundation/pile/: __init__.py  checks.py  geometry.py
src/osdagbridge/core/bridge_components/foundation/pile_cap/: __init__.py  geometry.py
src/osdagbridge/core/bridge_components/sub_structure/: __init__.py
src/osdagbridge/core/bridge_components/sub_structure/pedestal/: __init__.py  geometry.py
src/osdagbridge/core/bridge_components/sub_structure/pier/: __init__.py  checks.py  geometry.py
src/osdagbridge/core/bridge_components/sub_structure/pier_cap/: __init__.py  geometry.py
src/osdagbridge/core/bridge_components/super_structure/: __init__.py
src/osdagbridge/core/bridge_components/super_structure/crash_barrier/: __init__.py  geometry.py  properties.py
src/osdagbridge/core/bridge_components/super_structure/deck/: __init__.py  geometry.py  properties.py
src/osdagbridge/core/bridge_components/super_structure/girder/: __init__.py  checks.py  geometry.py  properties.py
src/osdagbridge/core/bridge_types/: __init__.py
src/osdagbridge/core/bridge_types/box_girder/: __init__.py  analyser.py  cad_generator.py  designer.py  dto.py  initial_sizing.py  report_generator.py
src/osdagbridge/core/bridge_types/plate_girder/: __init__.py  analyser.py  cad_generator.py  designer.py  dto.py  initial_sizing.py  report_generator.py
src/osdagbridge/core/bridge_types/truss/: __init__.py  analyser.py  cad_generator.py  designer.py  dto.py  initial_sizing.py  report_generator.py
src/osdagbridge/core/loads/: __init__.py  load_placement.py  moving_load.py  vehicle.py
src/osdagbridge/core/reports/: report_generator.py
src/osdagbridge/core/reports/templates/: default_template.tex  plate_girder_report.txt
src/osdagbridge/core/solvers/: native_solver.py  opensees_adapter.py  ospgrillage_adapter.py
src/osdagbridge/core/utils/: logger.py  units.py  validation.py
src/osdagbridge/core/utils/codes/: __init__.py  irc22_2015.py  irc24_2010.py  irc6_2017.py  load_combinations.py  registry.py
src/osdagbridge/desktop/: __init__.py  main.py
src/osdagbridge/desktop/ui/: __init__.py  main_window.ui
tests/: conftest.py
tests/integration/: test_api_plate_girder.py  test_cli_plate_girder.py  verification_ddcl_cases.py
tests/unit/: test_analyser.py  test_designer.py  test_initial_sizing.py  test_io.py  test_irc6_2017.py  test_load_combinations.py  test_moving_load.py  test_plate_girder.py
web/backend/: manage.py
web/frontend/: package.json
web/frontend/src/: App.jsx
