[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osdagbridge"
version = "0.1.0"
description = "OsdagBridge - Shared core for analysis and design of steel bridges (CLI, Desktop, Web)"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
  { name = "Osdag", email = "contact-osdag@efossee.in" }
]
requires-python = ">=3.9"

keywords = ["bridge", "steel", "structural engineering", "analysis", "IRC", "IS 800", "Osdag"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering",
]

# ------------------------------
# Core runtime dependencies
# ------------------------------
dependencies = [
  "numpy>=1.21",
  "scipy>=1.8",
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "matplotlib>=3.5",
]

# ------------------------------
# Optional extras
# ------------------------------
[project.optional-dependencies]
# Advanced analysis engines
opensees = ["openseespy>=3.5"]
ospgrillage = ["ospgrillage>=1.1"]

# CAD / Geometry (optional heavy dependency)
cad = ["pythonocc-core>=7.6.0"]

# Report generation
report = ["pylatex>=1.4"]

# Web backend (Django + DRF)
web-backend = [
  "Django>=4.2",
  "djangorestframework>=3.14"
]

# Web frontend dev tools (not required for backend runtime)
web-frontend = [
  "nodejs-bin>=18.0",     # Optional if you want version-pinning
]

# Desktop GUI
desktop = ["PySide6>=6.5"]

# Developer tools
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
]

[project.scripts]
osdagbridge = "osdagbridge.cli.__main__:main"

# ------------------------------
# setuptools config
# ------------------------------
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "examples*"]

[tool.setuptools.dynamic]
readme = { file = "README.md" }

# ------------------------------
# Tools: Ruff, Black, Mypy, Pytest
# ------------------------------

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
# Protected production files — do not modify source, suppress lint here
"src/osdagbridge/core/bridge_types/plate_girder/designer.py" = ["F401", "F841"]
"src/osdagbridge/core/utils/codes/load_combinations.py" = ["F401"]
# Test files — unused imports are common in test setup
"tests/**" = ["F401", "F841"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
  "tests"
]
markers = [
  "slow: marks tests as slow (deselect with -m 'not slow')",
  "integration: integration tests that may invoke subprocesses",
]


